; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/kvm/extr_coproc.c_kvm_handle_cp14_32.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/kvm/extr_coproc.c_kvm_handle_cp14_32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { i32 }
%struct.kvm_run = type { i32 }
%struct.coproc_params = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kvm_handle_cp14_32(%struct.kvm_vcpu* %0, %struct.kvm_run* %1) #0 {
  %3 = alloca %struct.kvm_vcpu*, align 8
  %4 = alloca %struct.kvm_run*, align 8
  %5 = alloca %struct.coproc_params, align 4
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %3, align 8
  store %struct.kvm_run* %1, %struct.kvm_run** %4, align 8
  %6 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %7 = call i32 @decode_32bit_hsr(%struct.kvm_vcpu* %6)
  %8 = getelementptr inbounds %struct.coproc_params, %struct.coproc_params* %5, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %10 = call i32 @trap_raz_wi(%struct.kvm_vcpu* %9, %struct.coproc_params* %5, i32* null)
  %11 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %12 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %13 = call i32 @kvm_vcpu_trap_il_is32bit(%struct.kvm_vcpu* %12)
  %14 = call i32 @kvm_skip_instr(%struct.kvm_vcpu* %11, i32 %13)
  ret i32 1
}

declare dso_local i32 @decode_32bit_hsr(%struct.kvm_vcpu*) #1

declare dso_local i32 @trap_raz_wi(%struct.kvm_vcpu*, %struct.coproc_params*, i32*) #1

declare dso_local i32 @kvm_skip_instr(%struct.kvm_vcpu*, i32) #1

declare dso_local i32 @kvm_vcpu_trap_il_is32bit(%struct.kvm_vcpu*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
